完成用户，视频接口